// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionFile should apply transformation on icon 1`] = `
<span>
  <input
    className="theme-action-file-input sr-only"
    disabled={false}
    id="42"
    onChange={[Function]}
    type="file"
  />
  <withI18nextTranslation(ActionButton)
    as="label"
    available={true}
    bsStyle="default"
    data-feature="action.feature"
    disabled={false}
    htmlFor="42"
    icon="talend-caret-down"
    inProgress={false}
    loading={false}
    t={[Function]}
    tooltipPlacement="top"
  >
    <span>
      Click me
    </span>
     
    default
  </withI18nextTranslation(ActionButton)>
</span>
`;

exports[`ActionFile should display a Progress indicator if set 1`] = `
<span
  className="navbar-btn"
>
  <input
    className="theme-action-file-input sr-only"
    disabled={true}
    id="42"
    onChange={[Function]}
    type="file"
  />
  <withI18nextTranslation(ActionButton)
    as="label"
    available={true}
    bsStyle="default"
    data-feature="action.feature"
    disabled={false}
    htmlFor="42"
    icon="talend-caret-down"
    inProgress={false}
    loading={false}
    t={[Function]}
    tooltipPlacement="top"
  >
    <span>
      Click me
    </span>
     
    default
  </withI18nextTranslation(ActionButton)>
</span>
`;

exports[`ActionFile should display a disabled Icon 1`] = `
<span
  className="navbar-btn"
>
  <input
    className="theme-action-file-input sr-only"
    disabled={true}
    id="42"
    onChange={[Function]}
    type="file"
  />
  <withI18nextTranslation(ActionButton)
    as="label"
    available={true}
    bsStyle="default"
    data-feature="action.feature"
    disabled={false}
    htmlFor="42"
    icon="talend-caret-down"
    inProgress={false}
    loading={false}
    t={[Function]}
    tooltipPlacement="top"
  >
    <span>
      Click me
    </span>
     
    default
  </withI18nextTranslation(ActionButton)>
</span>
`;

exports[`ActionFile should pass all props to the Button 1`] = `
<span
  className="navbar-btn"
>
  <input
    className="theme-action-file-input sr-only"
    disabled={false}
    id="42"
    onChange={[Function]}
    type="file"
  />
  <withI18nextTranslation(ActionButton)
    as="label"
    available={true}
    bsStyle="default"
    data-feature="action.feature"
    disabled={false}
    htmlFor="42"
    icon="talend-caret-down"
    inProgress={false}
    loading={false}
    t={[Function]}
    tooltipPlacement="top"
  >
    <span>
      Click me
    </span>
     
    default
  </withI18nextTranslation(ActionButton)>
</span>
`;

exports[`ActionFile should render a div with a input[type="file"] and a label to mimic a button 1`] = `
<span>
  <input
    className="theme-action-file-input sr-only"
    disabled={false}
    id="42"
    onChange={[Function]}
    type="file"
  />
  <withI18nextTranslation(ActionButton)
    as="label"
    available={true}
    bsStyle="default"
    data-feature="action.feature"
    disabled={false}
    htmlFor="42"
    icon="talend-caret-down"
    inProgress={false}
    loading={false}
    t={[Function]}
    tooltipPlacement="top"
  >
    <span>
      Click me
    </span>
     
    default
  </withI18nextTranslation(ActionButton)>
</span>
`;

exports[`ActionFile should render a div with a input[type="file"] with some classname on it 1`] = `
<span
  className="testClassName"
>
  <input
    className="theme-action-file-input sr-only"
    disabled={false}
    id="42"
    onChange={[Function]}
    type="file"
  />
  <withI18nextTranslation(ActionButton)
    as="label"
    available={true}
    bsStyle="default"
    data-feature="action.feature"
    disabled={false}
    htmlFor="42"
    icon="talend-caret-down"
    inProgress={false}
    loading={false}
    t={[Function]}
    tooltipPlacement="top"
  >
    <span>
      Click me
    </span>
     
    default
  </withI18nextTranslation(ActionButton)>
</span>
`;

exports[`ActionFile should render action with html property name = props.name if set 1`] = `
<span>
  <input
    className="theme-action-file-input sr-only"
    disabled={false}
    id="42"
    name="custom_name"
    onChange={[Function]}
    type="file"
  />
  <withI18nextTranslation(ActionButton)
    as="label"
    available={true}
    bsStyle="default"
    data-feature="action.feature"
    disabled={false}
    htmlFor="42"
    icon="talend-caret-down"
    inProgress={false}
    loading={false}
    t={[Function]}
    tooltipPlacement="top"
  >
    <span>
      Click me
    </span>
     
    default
  </withI18nextTranslation(ActionButton)>
</span>
`;

exports[`ActionFile should reverse icon/label 1`] = `
<span>
  <input
    className="theme-action-file-input sr-only"
    disabled={false}
    id="42"
    onChange={[Function]}
    type="file"
  />
  <withI18nextTranslation(ActionButton)
    as="label"
    available={true}
    bsStyle="default"
    data-feature="action.feature"
    disabled={false}
    htmlFor="42"
    icon="talend-caret-down"
    inProgress={false}
    loading={false}
    t={[Function]}
    tooltipPlacement="top"
  >
    <span>
      Click me
    </span>
     
    default
  </withI18nextTranslation(ActionButton)>
</span>
`;
